# django-project

./: .gitignore  pyproject.toml
onlinecourse/: admin.py  models.py  views.py
onlinecourse/migrations/: 0001_initial.py  0002_choice_submission_question_choice_question.py
onlinecourse/templates/onlinecourse/: course_detail_bootstrap.html  exam_result_bootstrap.html
