[project]
name = "djano-web-app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sloshycoin", email = "brendanburgee@gmail.com"},
]
dependencies = [
    "Django==4.2.3",
    "Pillow==10.0.0",
    "jinja2==3.0",
    "gunicorn==20.1.0",
    "contextvars",
    "typing-extensions==4.2.0",
    "aiohttp==3.8.3",
    "click==8.0.4",
    "wheel==0.41.1",
    "multidict==4.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
